--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,5 @@
-VagitanChatdir=./src/
-VagitanChat_PROGRAMS = VagitanChatServer
+SUBDIRS = src
 
-VagitanChatServer_SOURCES = `ls $(VagitanChatdir)*.cpp`
-VagitanChatServer_LDFLAGS = -lcrypto
-VagitanChatServer_CPPFLAGS= -O2
+
 
 
