--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,6 @@ VagitanChatdir=.
 VagitanChat_PROGRAMS = VagitanChatServer
 #VagitanChatServer_SOURCES = `echo *.cpp`
 VagitanChatServer_SOURCES = chat.cpp  room.cpp  server.cpp  sockets.cpp  user.cpp  util.cpp  vagitanchat.cpp
-VagitanChatServer_LDFLAGS = -lcrypto
+VagitanChatServer_LDFLAGS = -lcrypto -lpthread
 VagitanChatServer_CPPFLAGS= -O2
 
