--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 VagitanChatdir=.
 VagitanChat_PROGRAMS = VagitanChatServer
 #VagitanChatServer_SOURCES = `echo *.cpp`
-VagitanChatServer_SOURCES = chat.cpp  room.cpp  server.cpp  sockets.cpp  user.cpp  util.cpp  vagitanchat.cpp NativeClient.cpp Client.cpp
+VagitanChatServer_SOURCES = chat.cpp  room.cpp  server.cpp  sockets.cpp  user.cpp  util.cpp  vagitanchat.cpp NativeClient.cpp Client.cpp IRCClient.cpp
 VagitanChatServer_LDFLAGS = -lcrypto -lpthread
 VagitanChatServer_CPPFLAGS= -O2
 
